Adjustments for JDK 14