@@ -41,6 +41,7 @@ test {
         jvmArgs += [
             '--add-opens', "org.trellisldp.api/org.trellisldp.api=weld.core.impl",
             '--add-opens', "org.trellisldp.constraint/org.trellisldp.constraint=weld.core.impl",
+            '--add-opens', "java.base/java.lang=weld.core.impl",
         ]
     }
 }
